test/samples/invalid/missingNode.ygl
Foo {
    out {
        int bar = 0
    }
}